# claude-swarm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: code_review.py
src/claude_swarm/: __init__.py  cli.py  patterns.py  swarm.py
