[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-swarm"
version = "0.1.0"
description = "Orchestrate multiple Claude Code agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "D.Banks" }
]
keywords = ["claude", "ai", "agents", "swarm", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
claude-swarm = "claude_swarm.cli:main"

[project.urls]
Homepage = "https://github.com/dbanks/claude-swarm"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_swarm"]
